# meta-compose

./: LICENSE  README.md  composer.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
sample/: .env  composer.json  opensearch-cluster.yml  opensearch-dashboards.yml
